ok maybe this works

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/.BUILD.loader.js";
+      var loaderUrl = buildUrl + "/kek.loader.js";
       var config = {
-        dataUrl: buildUrl + "/.BUILD.data",
-        frameworkUrl: buildUrl + "/.BUILD.framework.js",
-        codeUrl: buildUrl + "/.BUILD.wasm",
+        dataUrl: buildUrl + "/kek.data",
+        frameworkUrl: buildUrl + "/kek.framework.js",
+        codeUrl: buildUrl + "/kek.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "INFR3335U-F2021-MidtermExamTemplate",
